--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "node --loader ts-node/esm prisma/seeds.js"
   }
 }
