--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for discord-clone-buildui on 2024-07-23T17:33:20+02:00
+# fly.toml app configuration file generated for discord-clone-buildui on 2024-07-24T08:42:10+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'discord-clone-buildui'
-primary_region = 'iad'
+primary_region = 'ewr'
 
 [build]
 
